[gd_scene load_steps=73 format=2]

[ext_resource path="res://assets/Bringer/Bringer-of-Death-SpritSheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bringer.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 70, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 490, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 630, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 770, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 910, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 70, 93 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 70, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 490, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 70, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 490, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 630, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 770, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 910, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 70, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 490, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 630, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 770, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 910, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 465, 70, 93 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 140, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 280, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 420, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 560, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 700, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 840, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 980, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 70, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 490, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 630, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 770, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 910, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 93, 70, 93 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 630, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 770, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 910, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 279, 70, 93 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 70, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 490, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 630, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 770, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 910, 372, 70, 93 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 140, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 280, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 420, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 560, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 700, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 840, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 980, 186, 140, 93 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 279, 140, 93 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 140, 279, 140, 93 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 92 ), SubResource( 93 ), SubResource( 94 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
}, {
"frames": [ SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "damage",
"speed": 7.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "melee",
"speed": 5.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "attack1",
"speed": 11.0
} ]

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 6.75, 25.75 )

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 2.5, 27.25 )

[node name="Bringer" type="AnimatedSprite"]
position = Vector2( 390, 175 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true
script = ExtResource( 2 )

[node name="hurtBox" type="Area2D" parent="."]
position = Vector2( 1, 19 )
collision_layer = 512
collision_mask = 512

[node name="CollisionHurt" type="CollisionShape2D" parent="hurtBox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 66 )

[node name="hitBox" type="Area2D" parent="."]
position = Vector2( -16, 16.5 )

[node name="CollisionHit" type="CollisionShape2D" parent="hitBox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 67 )

[connection signal="animation_finished" from="." to="." method="_on_Bringer_animation_finished"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
